# omniscidb

./: .gitignore  CMakeLists.txt  MapDServer.cpp  README.md  initdb.cpp
Analyzer/: Analyzer.cpp  Analyzer.h
Calcite/: Calcite.cpp
Catalog/: Catalog.cpp  Catalog.h  SysCatalog.cpp  SysCatalog.h
DataMgr/: CMakeLists.txt
DataMgr/FileMgr/: GlobalFileMgr.cpp  GlobalFileMgr.h
DataMgr/ForeignStorage/: ArrowCsvForeignStorage.cpp  ArrowCsvForeignStorage.h  ArrowForeignStorage.cpp  ForeignStorageCache.cpp  ForeignStorageCache.h
Embedded/: CMakeLists.txt  DBEManager.cpp  DBEManager.h  DBEngine.cpp  DBEngine.h  DBEngine.pxd  EmbeddedDbFSITest.cpp  EmbeddedDbTest.cpp  __init__.py  dbe.pyx  setup.in.py
Embedded/Python/: DBEngine.pxd  dbe.pyx
Embedded/test/: test_fsi.py  test_readcsv.py
Parser/: ParserNode.cpp  ParserWrapper.cpp  ParserWrapper.h
QueryEngine/: ArrowResultSet.h  ArrowResultSetConverter.cpp  BaselineJoinHashTable.cpp  BaselineJoinHashTable.h  CMakeLists.txt  CardinalityEstimator.cpp  CodeCache.h  ColumnFetcher.cpp  ColumnFetcher.h  ColumnIR.cpp  ColumnarResults.cpp  ColumnarResults.h  CompilationOptions.h  Execute.cpp  Execute.h  ExecutionDispatch.cpp  ExecutionKernel.cpp  ExecutionKernel.h  ExternalExecutor.cpp  ExtractFromTime.cpp  ExtractFromTime.h  GroupByRuntime.cpp  HashJoinRuntime.cpp  HashJoinRuntime.h  HashJoinRuntimeGpu.cu  IRCodegen.cpp  InValuesIR.cpp  InputMetadata.cpp  InputMetadata.h  JoinHashTable.cpp  JoinHashTable.h  JoinHashTableInterface.h  JoinHashTableQueryRuntime.cpp  MurmurHash.h  MurmurHash1Inl.h  NativeCodegen.cpp  OverlapsJoinHashTable.cpp  OverlapsJoinHashTable.h  Partitioning.cpp  Partitioning.h  (+20 more)
QueryEngine/Descriptors/: ColSlotContext.h  QueryCompilationDescriptor.cpp  QueryMemoryDescriptor.cpp  QueryMemoryDescriptor.h  RelAlgExecutionDescriptor.cpp  RelAlgExecutionDescriptor.h
QueryEngine/JoinHashTable/: JoinHashTable.cpp  JoinHashTable.h
QueryEngine/LoopControlFlow/: JoinLoop.cpp  JoinLoop.h
QueryRunner/: QueryRunner.cpp  QueryRunner.h
SampleCode/: CMakeLists.txt
Shared/: funcannotations.h  mapdpath.h  sqltypes.h
Tests/: ArrowCsvForeignStorageTest.cpp  CMakeLists.txt  CatalogMigrationTest.cpp  DBHandlerTestHelpers.h  DBObjectPrivilegesTest.cpp  EmbeddedDatabaseTest.cpp  ExecuteTest.cpp  ForeignServerDdlTest.cpp  ForeignTableDmlTest.cpp  HighCardinalityGroupByTest.cpp  MigrationMgrTest.cpp  ShowCommandsDdlTest.cpp
ThriftHandler/: CommandLineOptions.cpp  CommandLineOptions.h  DBHandler.cpp  DBHandler.h  MapDHandler.cpp  MapDHandler.h  QueryState.h
Utils/: Threading.h
java/calcite/src/main/java/com/mapd/calcite/parser/: MapDParser.java  MapDSqlOperatorTable.java
java/calcite/src/main/java/com/mapd/parser/server/: CalciteServerHandler.java
java/calcite/src/main/java/org/apache/calcite/prepare/: MapDPlanner.java
java/calcite/src/main/java/org/apache/calcite/rel/externalize/: MapDRelJson.java  MapDRelJsonReader.java
scripts/: mapd-deps-conda-dev-env-37.yml  mapd-deps-conda-dev-env.yml
scripts/conda/: build.sh  build_dev.sh  install-all.sh  meta.yaml
